<resources>
    <string name="app_name">Zephyr_Task_1</string>
    <string name="prajata_samanta">Prajata Samanta</string>
    <string name="from">from</string>
    <string name="create_form">CREATE FORM</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="address_line">Address Line</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="fill_in_the_details">FILL IN THE DETAILS</string>
    <string name="name">Name:</string>
    <string name="age_text">Age:</string>
    <string name="address_text">Address:</string>
</resources>