<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="17dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="22sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textColor="@color/light_black"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/age_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginHorizontal="17dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_text"
                    android:textSize="22sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textColor="@color/light_black"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="17dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_text"
                    android:textSize="22sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textColor="@color/light_black"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>